# Learn_OpenAI_SDK

./: LICENSE  README.md
class1_Chainlit/: pyproject.toml
class1_Chainlit/src/class1/: __init__.py
class2_OpenAI_Agents_basics/: pyproject.toml
class2_OpenAI_Agents_basics/src/class2/: __init__.py  chatbot.py
